[package]
name = "the_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "guessing_game"
path = "./guessing_game/src/main.rs"

[[bin]]
name = "variables"
path = "./variables/src/main.rs"

[[bin]]
name = "functions"
path = "./functions/src/main.rs"

[[bin]]
name = "branches"
path = "./branches/src/main.rs"

[[bin]]
name = "ownership"
path = "./ownership/src/main.rs"

[dependencies]
rand = "0.8.3"