# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "guessing_game",
    "variables",
    "functions",
    "branches",
    "ownership",
    "enums",
    "rectangles",
    "collections",
    "error_handling",
    "generics_traits_lifetimes",
    "minigrep",
    "closures",
    "iterators",
    "smart_pointers",
    "concurrency",
    "oop",
    "patterns",
    "advanced_rust",
    "hello",
]

